--- a/exploracion/3_maquetacion_web_y_4_disenio_y_edicion_II/chart_01/index.html
+++ b/exploracion/3_maquetacion_web_y_4_disenio_y_edicion_II/chart_01/index.html
@@ -29,6 +29,7 @@
       <h6 style="float:left"> Source: NASA, Roscosmos, etc. </h6>
       <h6 style="float:right"> Autores: Micaela Oliva y Carolina Olivera </h6>
     </div>
+    <!-- <h2> si3cufhwndautyhry37frh9374e230r93ytg</h2> -->
     <script src="https://cdn.jsdelivr.net/npm/d3@7"></script>
     <script src="https://cdn.jsdelivr.net/npm/@observablehq/plot@0.6"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/iframe-resizer/4.3.2/iframeResizer.contentWindow.js"></script>
