--- a/dataviz_3/index.html
+++ b/dataviz_3/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Brecha de Género en el espacio</title>
+    <title> hart 03 - Brecha de género en el espacio </title>
    
     <link rel="stylesheet" href="https://www.fontspace.com/get/family/4y7yn" type="text/css" />
     <link rel="stylesheet" href="style.css">
@@ -20,8 +20,9 @@
   </head>
   <body>
   
-    <h1> El espacio: ¿una brecha de género interplanetaria?</h1>
-    <h3> La conquista espacial sigue siendo un terreno desigual. A pesar de los avances en igualdad de género en otros campos, el espacio sigue siendo un ámbito dominado por hombres. ¿Por qué hay tan pocas mujeres astronautas?</h3>
+    <h1> El espacio: </h1>
+    <h1> ¿una brecha de género interplanetaria?</h1>
+    <h3> A pesar de los avances en igualdad de género en otros campos, el espacio sigue siendo un ámbito dominado por hombres. ¿Por qué hay tan pocas mujeres astronautas?</h3>
 
     <div id="chart"></div>
     <div id="tooltip"></div>
