--- a/dataviz_3/index.html
+++ b/dataviz_3/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title> hart 03 - Brecha de género en el espacio </title>
+    <title> Chart 03 - Brecha de género en el espacio </title>
    
     <link rel="stylesheet" href="https://www.fontspace.com/get/family/4y7yn" type="text/css" />
     <link rel="stylesheet" href="style.css">
