--- a/index.html
+++ b/index.html
@@ -1,27 +1,19 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Chart 01 - X</title>
-    <style>
-      #chart{
-        overflow-y:auto;
-      }
-      #chart svg{
-        max-width: initial;
-      }
-    </style>
-  </head>
-  <body>
+<html>
+<head>
+	<meta charset="UTF-8">
+	<title>Bienvenidos al Espacio</title>
+	<link rel="stylesheet" href="style.css">
+</head>
+<body>
+	<div class="welcome">
+    <h1>Bienvenidos al espacio</h1>
     
+		
+    <a href="experiencia.html"><button class="start-button">Comenzar experiencia</button>
+	</div>
 
-    <div id="chart"></div>
-
-    <script src="https://cdn.jsdelivr.net/npm/d3@7"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@observablehq/plot@0.6"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/iframe-resizer/4.3.2/iframeResizer.contentWindow.js"></script>
-    <script src="script.js"></script>
-  </body>
+	<script src="script.js"></script>
+</body>
 </html>
+
