--- a/experiencia/experiencia/experiencia.html
+++ b/experiencia/experiencia/experiencia.html
@@ -10,40 +10,40 @@
 	<h1 class="title"> Data espacial</h1>
 
 	<div class="square">
-		<div class="image" style="background-image: url('comandante.jpg');"></div>
+		<div class="image" style="background-image: url('https://olmiave.github.io/vd_s2_tp2_Oliva_Olivera/imagenes/comandante.jpg');"></div>
 		<div class="content">
 			<h2 class="subtitle">Comandantes por país</h2>
 			<p class="description">Los comandantes de las misiones espaciales son una pieza clave para el éxito de cualquier operación en el espacio. Cada país contribuye con su propia experiencia y recursos en la exploración espacial.</p>
-			<a href="http://127.0.0.1:3000/dataviz_2/index.html" class="button">Ver más</a>
+			<a href="https://olmiave.github.io/vd_s2_tp2_Oliva_Olivera/dataviz_1/index.html" class="button">Ver más</a>
 		</div>
 	</div>
 
 	<div class="square">
-		<div class="image" style="background-image: url('flight.jpg');"></div>
+		<div class="image" style="background-image: url('https://olmiave.github.io/vd_s2_tp2_Oliva_Olivera/imagenes/flight.jpg');"></div>
 		<div class="content">
 			<h2 class="subtitle">La diversidad en el espacio</h2>
 			
 			<p class="description">Las misiones espaciales requieren de una mentalidad global y colaborativa para alcanzar objetivos más allá de fronteras y géneros. La pasión por la exploración espacial y la capacidad de adaptación a entornos hostiles son esenciales para su éxito en misiones espaciales.</p>
-			<a href="#" class="button">Ver más</a>
+			<a href="https://olmiave.github.io/vd_s2_tp2_Oliva_Olivera/dataviz_2/index.html" class="button">Ver más</a>
 		</div>
 	</div>
 
 	<div class="rectangle">
-		<div class="image" style="background-image: url('Mujer-astronauta.jpg');" height="100" ></div>
+		<div class="image" style="background-image: url('https://olmiave.github.io/vd_s2_tp2_Oliva_Olivera/imagenes/Mujer-astronauta.jpg');" height="100" ></div>
 		<div class="content">
 			<h2 class="subtitle">Techo de cristal cósmico: </h2>
 			<h3> La brecha de género en la exploración espacial</h3>
 			<p class="description">Las mujeres astronautas todavía representan una minoría en la industria espacial, y enfrentan barreras y prejuicios persistentes. Aunque cada vez más mujeres están rompiendo el techo de cristal cósmico y alcanzando nuevas alturas, queda mucho por hacer para lograr una verdadera igualdad de género en el espacio.</p>
-			<a href="http://127.0.0.1:3000/dataviz_1/index.html" class="button">Ver más</a>
+			<a href="https://olmiave.github.io/vd_s2_tp2_Oliva_Olivera/dataviz_3/index.html" class="button">Ver más</a>
 		</div>
 	</div>
 
 	<div class="rectangle">
-		<div class="image" style="background-image: url('space.jpg');"></div>
+		<div class="image" style="background-image: url('https://olmiave.github.io/vd_s2_tp2_Oliva_Olivera/imagenes/space.jpg');"></div>
 		<div class="content">
 			<h2 class="subtitle">El tiempo en el espacio</h2>
 			<p class="description">La duración de las misiones espaciales puede variar drásticamente según el país, lo que sugiere una competencia entre naciones para establecer su presencia en el espacio. NASA ha enviado a los astronautas en misiones más largas, mientras que los astronautas rusos han pasado hasta un año en el espacio en misiones individuales.</p>
-			<a href="http://127.0.0.1:3000/dataviz_3/index.html" class="button">Ver más</a>
+			<a href="https://olmiave.github.io/vd_s2_tp2_Oliva_Olivera/dataviz_4/index.html" class="button">Ver más</a>
 		</div>
 	</div>
 
