--- a/exploracion/1-marcas_y_canales/chart_04/index.html
+++ b/exploracion/1-marcas_y_canales/chart_04/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Chart 05 - size B</title>
+    <title>Chart 04 </title>
     <style>
       #chart{
         overflow-y:auto;
