--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <h1>Bienvenidos al espacio</h1>
     
 		
-    <a href="experiencia.html"><button class="start-button">Comenzar experiencia</button>
+    <a href='https://olmiave.github.io/vd_s2_tp2_Oliva_Olivera/experiencia/experiencia.html'><button class="start-button">Comenzar experiencia</button>
 	</div>
 
 	<script src="script.js"></script>
