--- a/experiencia/experiencia.html
+++ b/experiencia/experiencia.html
@@ -9,7 +9,7 @@
     <script src="script.js"></script>
 	<h1 class="title"> Data espacial</h1>
 
-	<div class="square">
+	<div class="rectangle">
 		<div class="image" style="background-image: url('https://olmiave.github.io/vd_s2_tp2_Oliva_Olivera/imagenes/comandante.jpg');"></div>
 		<div class="content">
 			<h2 class="subtitle">Comandantes por país</h2>
@@ -18,7 +18,7 @@
 		</div>
 	</div>
 
-	<div class="square">
+	<div class="rectangle1">
 		<div class="image" style="background-image: url('https://olmiave.github.io/vd_s2_tp2_Oliva_Olivera/imagenes/flight.jpg');"></div>
 		<div class="content">
 			<h2 class="subtitle">La diversidad en el espacio</h2>
@@ -38,7 +38,7 @@
 		</div>
 	</div>
 
-	<div class="rectangle">
+	<div class="rectangle1">
 		<div class="image" style="background-image: url('https://olmiave.github.io/vd_s2_tp2_Oliva_Olivera/imagenes/space.jpg');"></div>
 		<div class="content">
 			<h2 class="subtitle">El tiempo en el espacio</h2>
