--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Bienvenidos al Espacio</title>
-	<link rel="stylesheet" href="style.css">
+	<link rel="stylesheet" href='https://olmiave.github.io/vd_s2_tp2_Oliva_Olivera/experiencia/style.css'>
 </head>
 <body>
 	<div class="welcome">
@@ -13,7 +13,7 @@
     <a href='https://olmiave.github.io/vd_s2_tp2_Oliva_Olivera/experiencia/experiencia.html'><button class="start-button">Comenzar experiencia</button>
 	</div>
 
-	<script src="script.js"></script>
+	<script src='https://olmiave.github.io/vd_s2_tp2_Oliva_Olivera/experiencia/script.js'></script>
 </body>
 </html>
 
