--- a/exploracion/1-marcas_y_canales/chart_08/index.html
+++ b/exploracion/1-marcas_y_canales/chart_08/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Chart 13 - Line Mark A</title>
+    <title>Chart 08 </title>
     <style>
       #chart {
         overflow-y: auto;
